# geometry-valeria211-ui

./: .gitignore  CMakeLists.txt  Makefile  circle.h  geometry.txt  main  main.cpp
.github/workflows/: c-cpp.yml
include/: circle.h
src/: circle.cpp  main.cpp
test/: main.cpp  test.cpp
